--- a/src/components/cards/date/date_card.scss
+++ b/src/components/cards/date/date_card.scss
@@ -12,29 +12,36 @@
     height: 374px;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    > .date_card_items {
-        padding: 43px 30px 30px 30px;
+     .date_card_items {
+        margin: 0 30px 30px 31px;
+        padding-top: 41px;
         height: 305px;
         width: 320px;
-    > .date_card_txt {
-        padding-bottom: 21px;
-        // >h1 {
-        //     // font-weight: 800;
-        //     // margin: 0;
-        // } 
+     .date_card_txt {
+        h1 {
+            margin: 0;
+            line-height: 30px;
+        } 
+    }
+    .date_dropdown_label_input {
+        margin-top: 19px;
     }
 }
 }
 .date_card_button {
-        padding-top: 33px;
+        margin-top: 31px;
     }
 .dropdown_label_input  {
-        padding-top: 22px;
+        margin-top: 20px;
     }
 
 .date_card_form {
     padding-top: 21px;
 }
+.date_dropdown_input {
+    padding: 0;
+    margin-top: 5px;
+} 
 .date_input {
     display: flex;
     flex-direction: row;
@@ -42,8 +49,7 @@
 .guests_input {
     @include form_style;
     float: none;
-    padding-top: 20px;
+    margin-top: 15px;
     display: flex;
     flex-direction: column;
 }
-
