--- a/src/components/form_elements/txt_field/txt_field.scss
+++ b/src/components/form_elements/txt_field/txt_field.scss
@@ -1,7 +1,7 @@
 @mixin input_style {
-    margin-top: 5px;
-    width: 320px;
-    height: 44px;
+    // margin-top: 3px;
+    width: 315px;
+    height: 40px;
     border-radius: 4px;
     border-width: 1px;
     border-color: #1F2041;
