--- a/src/pages/cards.pug
+++ b/src/pages/cards.pug
@@ -8,8 +8,9 @@ html(lang="ru")
         style 
             include ../../node_modules/air-datepicker/dist/css/datepicker.min.css
             include ../asserts/nslider-main/css/nslider.min.css
+            include ../asserts/dropdownplugin/numbercategoryselector.css
         script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
-        //- script(src='../../node_modules/air-datepicker/dist/js/datepicker.min.js')
+        script(src='../../node_modules/air-datepicker/dist/js/datepicker.js')
         script(src="../src/asserts/nslider-main/js/nslider.js") 
 
     body 
