--- a/src/pages/search_room/search_room.pug
+++ b/src/pages/search_room/search_room.pug
@@ -41,13 +41,13 @@ html(lang="ru")
             h1 Номера, которые мы для вас подобрали
             .search_room_items
                 include ../../components/cards/room/room_card.pug
-                +room('888', 'люкс','9 990Р', '145', 5)
-                +room('840', '','9 990Р', '65', 4)
-                +room('980', 'люкс','8 500Р', '35', 3)
-                +room('856', '','7 300Р', '19', 5)
-                +room('740', '','6 000Р', '44', 4)
-                +room('982', '','5 890Р', '56', 3)
-                +room('678', '','5 500Р', '45', 5)
+                +room('888', 'люкс','9 990Р', '145', 5, 'room_1')
+                +room('840', '','9 990Р', '65', 4, 'room_2')
+                +room('980', 'люкс','8 500Р', '35', 3, 'room_3')
+                +room('856', '','7 300Р', '19', 5, 'room_4')
+                +room('740', '','6 000Р', '44', 4, 'room_5')
+                +room('982', '','5 890Р', '56', 3, 'room_6')
+                +room('678', '','5 500Р', '45', 5, 'room_7')
 
 
         include ../../components/headers_footers/footer/footer
