change login card

--- a/src/components/cards/login/login_card.pug
+++ b/src/components/cards/login/login_card.pug
@@ -1,6 +1,6 @@
 .login_card 
     .login_card_items
-        p Войти 
+        h1 Войти 
         form(action="") 
             include ../../form_elements/txt_field/txt_field
             +txt_field("", "Email")
