--- a/src/components/form_elements/txt_field/txt_field.scss
+++ b/src/components/form_elements/txt_field/txt_field.scss
@@ -34,4 +34,6 @@
 .txt_field_input::placeholder {
     @include input_text_style();
     opacity: 50%;
+    font-family: 'Montserrat';
+    padding-left: 14px;
   }
