--- a/src/components/cards/login/login_card.scss
+++ b/src/components/cards/login/login_card.scss
@@ -11,15 +11,20 @@
     margin-top: 50px;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    > .login_card_items{
+    .login_card_items{
         min-height: 286px;
         min-width: 319px;
         padding: 40px 30px 20px 31px;
-    > p {
-        @include form_style();
-        margin-top: 0;
     }
-}
+    h1 {
+        margin-bottom: 0;
+    }
+    form {
+        margin-top: 20px;
+        .txt_field_input_label {
+            margin-bottom: 10px;
+        }
+    }
 }
 .login_button {
     padding-top: 20px;
@@ -27,12 +32,12 @@
 .login_card_registration {
     display: inline-flex;
     padding-top: 30px;
-    > p {
+    p {
         font-family: 'Montserrat' sans-serif;
         color: #1F2041;
         font-size: 14px;
     }
-    > .login_card_button {
+    .login_card_button {
         padding-left: 54px;
     }
 }
