--- a/src/components/form_elements/radio_button/radio_button.pug
+++ b/src/components/form_elements/radio_button/radio_button.pug
@@ -1,4 +1,4 @@
-mixin radio_button (type, label)
+mixin radio_button (type, label, value)
     .radio
-        input.radio_input#woman(type="radio", onMouseDown="this.isChecked=this.checked; " onClick="this.checked=!this.isChecked; " name="")
-        label.radio_label(for="woman")= label
+        input.radio_input(type="radio", onMouseDown="this.isChecked=this.checked; " onClick="this.checked=!this.isChecked; " value=value name="" id=type)
+        label.radio_label(for=type)= label
