add icons font, change buttons

--- a/src/components/form_elements/buttons/buttons.pug
+++ b/src/components/form_elements/buttons/buttons.pug
@@ -2,4 +2,4 @@ mixin button(button_text, type)
         button.button(class = type + "_button")(@click.prevent="onClick")
             p.button_text=button_text
             if type == "full"
-                img.arrow(src=require("/src/components/form_elements/buttons/arrow.svg"))
+                span.material-icons="arrow_forward"
