--- a/src/components/form_elements/dropdown/dropdown.scss
+++ b/src/components/form_elements/dropdown/dropdown.scss
@@ -2,10 +2,24 @@
 
 .dropdown_label_input  {
     @include label_input_style;
+    height: 64.44px;
+    span {
+        position: relative;
+        z-index: 2;
+        line-height: 24px;
+        font-size: 24px;
+        width: 44px;
+        height: 44px;
+        color: rgba(31, 32, 65, 0.5);
+        left: 290px;
+        bottom: 36px;
+    }
 }
 .dropdown_input {
     @include input_style;
     margin-top: 4px;
+    position: relative;
+    min-height: 44px;
 }
 .dropdown_label {
     @include input_text_style();
@@ -13,6 +27,17 @@
     font-size: 12px;
 
 }
+.dropdown_input:focus::-webkit-input-placeholder {
+    color: rgba(31, 32, 65);
+}
+.dropdown_input::placeholder {
+    font-family: "Montserrat";
+    font-size: 14px;
+    line-height: 24px;
+    color: rgba(31, 32, 65, 0.75);
+    padding-left: 14px;
+}
+
 div.NCS.category {
     display: flex;
     flex-direction: row;
