--- a/src/components/form_elements/like_button/like_button.scss
+++ b/src/components/form_elements/like_button/like_button.scss
@@ -5,6 +5,7 @@
     border: 1px solid rgba(31, 32, 65, 0.25);
     background: none;
     background-image: url(~icons/unlike_icon.svg);
+    // content: '<span class="material-icons">favorite</span>';
     background-size: 10px 8px;
     background-repeat: no-repeat;
     background-position: top 5px left 5px;
